@@ -24,6 +24,9 @@ abstract class Platform implements PlatformInterface
 	/** @var  Container  The component container */
 	protected $container = null;
 
+	/** @var  bool  Are plugins allowed to run in CLI mode? */
+	protected $allowPluginsInCli = false;
+
 	/**
 	 * Public constructor.
 	 *
@@ -377,5 +380,25 @@ abstract class Platform implements PlatformInterface
 	public function showErrorPage(Exception $exception)
 	{
 		throw $exception;
+	}
+
+	/**
+	 * Are plugins allowed to run in CLI mode?
+	 *
+	 * @return  bool
+	 */
+	public function isAllowPluginsInCli()
+	{
+		return $this->allowPluginsInCli;
+	}
+
+	/**
+	 * Set whether plugins are allowed to run in CLI mode
+	 *
+	 * @param   bool  $allowPluginsInCli
+	 */
+	public function setAllowPluginsInCli($allowPluginsInCli)
+	{
+		$this->allowPluginsInCli = $allowPluginsInCli;
 	}
 }
