@@ -1,7 +1,8 @@
 FOF 3.4.3
 ================================================================================
-~ Allow backend views to be cacheable
-~ Allow per-user caching
++ Allow backend views to be cacheable
++ Allow per-user caching
++ Allow plugins to be triggered from the CLI
 # [HIGH] Saving the component parameters did not clean Joomla's system cache
 
 FOF 3.4.2
